# ASL-XPlane-Research

./: .gitignore  README.md  install_plugin.py  pyproject.toml  setup.py
aslxplane/: __main__.py
aslxplane.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aslxplane/.ground_control/: xplanecontroller.py
aslxplane/data/: dynamics_linear.json
aslxplane/flight_control/: dynamics.py  lqr_controller.py  lqr_utils.py  mpc_controller.py  mpc_controller_script.py  mpc_utils.py  utils.py
aslxplane/perception/: state.py  vis_state.py
aslxplane/simulation/: weather.py
experiments/: evaluate_vision.py  evaluate_vision_mpc.py  landing_with_ground_truth.py  landing_with_gt_mpc.py  landing_with_gt_mpc_tune.py  recording_010058.json  recording_043927.json  recording_046022.json  recording_141561.json  recording_142304.avi  recording_171214.avi  recording_194102.avi  recording_194102.json  recording_210701.json  recording_258685.avi  recording_269989.avi  recording_269989.json  recording_277840.json  recording_309871.avi  recording_309871.json  recording_310203.json  recording_318050.json  recording_323053.json  recording_373793.avi  recording_373793.json  recording_422455.json  recording_430812.avi  recording_430812.json  recording_431507.json  recording_445854.json  recording_457725.json  recording_470855.avi  recording_470855.json  recording_475713.json  recording_697443.json  recording_702176.json  recording_705908.json  recording_734599.avi  recording_757998.avi  recording_767073.json  (+130 more)
notebooks/: analyze_dynamics.ipynb  tune_controller_MPC.ipynb
(+12 files in other folders)
